@@ -589,6 +589,8 @@ Available options:
 ; {{-version}} : show version and exit
 ; {{-force}} : don't ask, delete whatever matches
 ; {{-s   -sudo}} : use {{sudo(1)}} for deleting files
+; {{-p   -prefix PREFIX}} : change installation prefix to {{PREFIX}}
+; {{-deploy}} : uninstall extension from the application directory for a deployed application (see [[Deployment]] for more information)
 ; {{-host}} : when cross-compiling, remove extensions for host system only
 ; {{-target}} : when cross-compiling, remove extensions for target system only
 ; {{-exact}} : match extension-name exactly (do not match as pattern)
@@ -600,6 +602,8 @@ Available options:
 ; {{-f   -files}} : list installed files
 ; {{-host}} : when cross-compiling, show extensions for host system only
 ; {{-target}} : when cross-compiling, show extensions for target system only
+; {{-p   -prefix PREFIX}} : change installation prefix to {{PREFIX}}
+; {{-deploy}} : look for extensions in the application directory for a deployed application (see [[Deployment]] for more information)
 ; {{-exact}} : match extension-name exactly (do not match as pattern)
 ; {{-list}} : list installed egg version in format suitable for {{chicken-install -override}}
 
